Prevent post kehbob menu from showing in front of header by adding z-index to header

--- a/src/app/components/kehbab-menu/kehbab-menu.component.css
+++ b/src/app/components/kehbab-menu/kehbab-menu.component.css
@@ -21,6 +21,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  z-index: 1;
   margin-bottom: 4px;
   height: 17px;
   width: 100%;
