--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -45,4 +45,5 @@
 
 .menu {
   margin-right: 5px;
+  z-index: 0;
 }
